--- a/taskdesign.css
+++ b/taskdesign.css
@@ -5,21 +5,21 @@
 h1{
 	text-align: center;
 	text-decoration: 2px solid underline;
-	color: darkgray;
+	color: #393737;
 	font-family: cursive;
 }
 
 h3{
 	text-align: center;
 	text-decoration: 2px solid underline;
-	color: darkgray;
+	color: #393737;
 	font-family: cursive;
 }
 
 .p{
 	text-align: center;
 	text-decoration: 2px solid underline;
-	color: darkgray;
+	color: #393737;
 	font-family: cursive;
 }
 
